[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cfn_asset_move"
version = "0.0.1"
authors = [
    {name = "Pete Davis", email = "pete@peterjdavis.info"},
]
description = "Move CFN assets"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["CFN", "SAM"]
license = {text = "MIT License"}
dependencies = [
    "boto3",
]

[project.scripts]
cfn-asset-move = "cfn_asset_move:process_template"